--- a/empty-example/index.html
+++ b/empty-example/index.html
@@ -14,7 +14,7 @@
   <script src="../p5.js"></script>
   <script src="../node_modules/p5.js-svg/dist/p5.svg.js"></script>
   <!--<script src="../addons/p5.sound.min.js"></script>-->
-  <script src="sketch.js"></script>
+  <script src="sketch_iteration.js"></script>
 </head>
 
 <body>
