--- a/empty-example/index.html
+++ b/empty-example/index.html
@@ -12,9 +12,9 @@
     }
   </style>
   <script src="../p5.js"></script>
-  <script src="../node_modules/p5.js-svg/dist/p5.svg.js"></script>
-  <!--<script src="../addons/p5.sound.min.js"></script>-->
-  <script src="sketch_iteration.js"></script>
+  <!--<script src="../node_modules/p5.js-svg/dist/p5.svg.js"></script>-->
+  <script src="../addons/p5.sound.min.js"></script>
+  <script src="sketch_flow_response.js"></script>
 </head>
 
 <body>
